--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="Project1.png" alt="" /></a>
 								<h3>Kepler problem simulation (MATLAB)</h3>
 								<p>Simulation of the two body problem, solved by approximating differential equaiton solutions using different numerical methods.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="Project2.png" alt="" /></a>
 								<h3>Graph point intersect (MATLAB)</h3>
 								<p>General method to fit a graph to an arbitrary number of points using newtons and least squares solution.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="#" class="image fit thumb"><img src="Project3.png" alt="" /></a>
 								<h3>Self driving car simulation (MATLAB)</h3>
 								<p>Simple simulation of self driving car algorithm with one lane.</p>
 							</article>
