added udnerlines to links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			.underline-hover:hover {
+				text-decoration: underline;
+				text-decoration-color: grey;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -41,28 +47,36 @@
 						<h2>Recent Projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="Project1.png" alt="" /></a>
-								<h3>Kepler problem simulation (MATLAB)</h3>
+								<a href="Project1.png" class="image fit thumb"><img src="Project1.png" alt="" /></a>
+								<a href="https://github.com/randerssonbenedet/Kepler-problem" class="underline-hover">
+									<h3>Kepler problem simulation (MATLAB)</h3>
+								</a>								
 								<p>Simulation of the two body problem, solved by approximating differential equaiton solutions using different numerical methods.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="Project2.png" alt="" /></a>
-								<h3>Graph point intersect (MATLAB)</h3>
-								<p>General method to fit a graph to an arbitrary number of points using newtons and least squares solution.</p>
+								<a href="Project2.png" class="image fit thumb"><img src="Project2.png" alt="" /></a>
+								<a href="https://github.com/randerssonbenedet/Numerical-methods-project" class="underline-hover">
+									<h3>Numerical analysis projects (MATLAB)</h3>
+								</a>								
+								<p>General method to fit a graph to an arbitrary number of points using newtons and least squares solution, etc.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="#" class="image fit thumb"><img src="Project3.png" alt="" /></a>
-								<h3>Self driving car simulation (MATLAB)</h3>
+								<a href="Project3.png" class="image fit thumb"><img src="Project3.png" alt="" /></a>
+								<a href="https://github.com/randerssonbenedet/Self-driving-car-simulation" class="underline-hover">
+									<h3>Self driving car simulation (MATLAB)</h3>
+								</a>								
 								<p>Simple simulation of self driving car algorithm with one lane.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Battleships game (Python)</h3>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/fulls/04.jpg" alt="" /></a>
+								<a href="https://github.com/randerssonbenedet/Self-driving-car-simulation" class="underline-hover">
+									<h3>Battleships game (Python)</h3>
+								</a>								
 								<p>Battleships game with graphic interface and scoreboard coded entirely from scratch.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="https://github.com/roqandben" class="button">Full Portfolio (GitHub)</a></li>
+							<li><a href="https://github.com/randerssonbenedet" class="button">Full Portfolio (GitHub)</a></li>
 						</ul>
 					</section>
 
@@ -418,7 +432,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="https://github.com/roqandben" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://github.com/randerssonbenedet" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li>
 							<a href="https://www.linkedin.com/in/roqueab/" class="icon brands fa-linkedin">
 							  <span class="label">LinkedIn</span>
