--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="pic2.jpg" alt="" /></a>
-					<h1><strong>Roque Andersson Benedet</strong><br />
-					Student, MSc Engineering physics<br />
-					KTH Royal Institute of Technology</a></h1>
+					<h1><strong>R. Andersson Benedet</strong><br />
+					MSc Engineering physics, KTH<br />
+					</a></h1>
 				</div>
 			</header>
 
